--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="background-image: url('./images/backgroundweb.png')">
 
     <div class="container px-4 py-5" id="custom-cards">
-      <h2 class="pb-2 border-bottom">Our projects</h2>
+      <h2 class="pb-2 border-bottom">Our latest projects</h2>
 
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5 shadow-5-strong">
         <div class="col">
@@ -80,7 +80,7 @@
         </div>
 
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-5-strong border border-dark shadow-lg" style="background-image: url('./images/africa.jpg');">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-5-strong border border-dark shadow-lg" style="background-image: url('./images/africa.jpeg');">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Restoring rainforests in Africa</h2>
             </div>
