--- a/sites/aboutus.html
+++ b/sites/aboutus.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script> 
+      function getVal() {
+        const val = document.querySelector('input').value;
+        console.log(val);
+        if (val == "michal.stehlik@pslib.cz"){
+          window.location.replace("https://www.youtube.com/watch?v=MkguxyRm9Rg&ab_channel=MichalStehl%C3%ADk");
+        }
+        if (val == "hanz"){
+          window.location.replace("https://www.turnov.cz/");
+        }
+        if (val == "tomas.kazda@pslib.cz"){
+          window.location.replace("https://www.youtube.com/watch?v=H49cjUqpb0w&ab_channel=Tom%C3%A1%C5%A1Kazda");
+        }
+      }
+      </script>
     <title>Darkography</title>
 </head>
 <body class="text-white bg-dark ">
@@ -75,13 +90,13 @@
             </div>
               <div class="col-md-5 col-12">
               <div class="form-outline form-white mb-4">
-                <input type="email" id="form5Example29" class="form-control" />
+                <input type="text" id="form5Example29" placeholder="Enter text" onblur="getVal()" class="form-control" >
                 <label class="form-label" for="form5Example29">Email address</label>
               </div>
             </div>
               <div class="col-auto">
-              <button type="submit" class="btn btn-outline-warning mb-4">
-                Subscribe
+                <button type="submit" onclick="getVal()" class="btn btn-outline-warning mb-4">
+                  Subscribe
               </button>
             </div>
           </div>
