--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -28,7 +28,7 @@
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark shadow-sm container-fluid" style="background-color: rgba(0, 0, 0, 0.2);">
     <div class="container-fluid ">
       <a class="navbar-brand" href="../index.html">
-        <img src="../images/icono-de-camara-gris.png" alt="Camera" width="50" height="50">
+        <img src="../images/kamerzluta.png" alt="Camera" width="50" height="50">
       </a>
       <a class="navbar-brand text-warning fw-bold" href="../index.html">Darkography</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
