--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   <footer class="bg-dark text-center text-white text-muted">
     <div class="container p-4 pb-0">
-      <section class="">
+      <section class="footer">
           <div class="row d-flex justify-content-center">
             <div class="col-auto">
               <p class="pt-2">
