--- a/sites/aboutus.html
+++ b/sites/aboutus.html
@@ -80,7 +80,7 @@
   </div>
   <footer class="bg-dark text-center text-white text-muted">
     <div class="container p-4 pb-0">
-      <section class="">
+      <section class="bg-dark">
           <div class="row d-flex justify-content-center">
             <div class="col-auto">
               <p class="pt-2">
