--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -106,7 +106,7 @@ style="
 </div>
 <footer class="bg-dark text-center text-white text-muted">
   <div class="container p-4 pb-0">
-    <section class="">
+    <section class="bg-dark">
         <div class="row d-flex justify-content-center">
           <div class="col-auto">
             <p class="pt-2">
