--- a/sites/ourprojects.html
+++ b/sites/ourprojects.html
@@ -121,7 +121,7 @@ style="
 
 <footer class="bg-dark text-center text-white text-muted">
   <div class="container p-4 pb-0">
-    <section class="">
+    <section class="bg-dark">
         <div class="row d-flex justify-content-center">
           <div class="col-auto">
             <p class="pt-2">
