--- a/sites/ourprojects.html
+++ b/sites/ourprojects.html
@@ -56,7 +56,7 @@ style="
   background-image: url('../images/yellow.png');">
 
   <main>
-    <div class=" text-secondary px-4 py-4 text-center">
+    <div class=" text-secondary text-center">
       <div class="py-5">
         <h1 class="display-5 fw-bold text-white">Our projects</h1>
         <div class="col-lg-6 mx-auto">
@@ -91,7 +91,7 @@ style="
         <img src="../images/africaforest.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>We also think about nature.</h5>
-          <p>For every order, we send 1% of our earnings to save the monkeys in the rainforest.</p>
+          <p>For every order, we send 1% by bananas of our earnings to save the monkeys in the rainforest.</p>
         </div>
       </div>
     </div>
@@ -104,6 +104,14 @@ style="
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <div class="px-4 py-5 my-5">
+    <h1 class="display-5 fw-bold">Bananas sent to Africa:</h1>
+    <div class="progress text-center bg-dark">
+      <div class="progress-bar bg-warning text-dark" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">1879453 bananas</div>
+    </div>
+  </div>
+
 
   <div class="text-secondary text-center">
     <div class="py-5">
