--- a/sites/ourprojects.html
+++ b/sites/ourprojects.html
@@ -107,7 +107,7 @@ style="
 
   <div class="px-4 py-5 my-5">
     <h1 class="display-5 fw-bold">Bananas sent to Africa:</h1>
-    <div class="progress text-center bg-dark">
+    <div class="progress text-center bg-dark m-5">
       <div class="progress-bar bg-warning text-dark" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">1879453 bananas</div>
     </div>
   </div>
