--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
                   <li class="me-auto">
                     <img src="./images/kamerzluta.png" alt="Bootstrap" width="32" height="32" class="">
                   </li>
+                  <li class="me-auto"> 
+                    <a href="./sites/ourprojects.html" class="btn btn-outline-warning">Check it!</a>
+                  </li>
                   <li class="d-flex align-items-center">
                     <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                    <small>3 days ago</small>
+                    <small>4d</small>
                   </li>
                 </ul>
               </div>
@@ -97,9 +100,12 @@
                   <li class="me-auto">
                     <img src="./images/kamerzluta.png" alt="Bootstrap" width="32" height="32" class="">
                   </li>
+                  <li class="me-auto"> 
+                    <a href="./sites/ourprojects.html" class="btn btn-outline-warning">Check it!</a>
+                  </li>
                   <li class="d-flex align-items-center">
                     <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                    <small>4 days ago</small>
+                    <small>8d</small>
                   </li>
                 </ul>
               </div>
@@ -114,9 +120,12 @@
                   <li class="me-auto">
                     <img src="./images/kamerzluta.png" alt="Bootstrap" width="32" height="32" class="">
                   </li>
+                  <li class="me-auto"> 
+                    <a href="./sites/ourprojects.html" class="btn btn-outline-warning">Check it!</a>
+                  </li>
                   <li class="d-flex align-items-center">
                     <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                    <small>5 days ago</small>
+                    <small>13d</small>
                   </li>
                 </ul>
               </div>
