--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </main>
 
   <div class="b-example-divider mb-0"></div>
-  <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="background-image: url('./images/backgroundweb.png')">
+  <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="background-image: url('./images/backgroundweb.jpg')">
 
     <div class="container px-4 py-5 container" id="custom-cards">
       <h2 class="pb-2 border-bottom">Our latest projects</h2>
