--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -100,8 +100,7 @@ style="
       <textarea class="form-control" id="form6Example7" rows="4"></textarea>
       <label class="form-label" for="form6Example7">Additional information</label>
     </div>
-  
-    <button type="submit" class="btn btn-outline-warning justify-content-center mb-4">Place order</button>
+    <a href="https://cat-bounce.com/" class="btn btn-outline-warning">Order us</a>
   </form>
 </div>
 
